# Nobu

./: .env.example  Cargo.toml  README.md
src/: main.rs
src/commands/: general.rs  mod.rs  otaku.rs  random.rs
src/utils/: logger.rs  utils.rs
