[package]
authors = ["Kurozero <kurozeroinc@gmail.com>"]
name = "nobu"
version = "0.2.1"

[dependencies]
chrono = "*"
serenity = { git = "https://github.com/zeyla/serenity", branch = "v0.6.x" }
toml = "0.4.2"
time = "0.1"
rand = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
colored = "1.6"
cleverbot_io = "*"
env_logger = "~0.4"
kankyo = "~0.1"
psutil = "1.1"
schedule_recv = "0.1.0"
typemap = "0.3"
reqwest = "0.8.0"
tokio-core = "~0.1"

[dependencies.kitsu]
version = "0.1"
features = ["reqwest-support"]